// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletedFoo render 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
      <input
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <hr />
  <div>
    <label>
      title
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <input
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`FullFoo render 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
      <input
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <hr />
  <div>
    <label>
      title
      <input
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <input
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`NewFoo render 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <label>
      Name
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <hr />
  <div>
    <label>
      title
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <input
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;
